...

  if (isLoading) {
    return (
      <View style={styles.container}>
        <Stack.Screen
          options={{
            title: "Your Result",
            headerBackTitle: "Solution",
            headerBackTitleStyle: { fontFamily: "Lexend" },
          }}
        />
        <Text style={[styles.loadingText, styles.centerMessage]}>
          Loading result...
...
            <FontAwesome
              name="refresh"
              size={20}
              color="#fff"
              style={{ marginRight: 8 }}
            />
            <Text style={styles.tryAgainText}>Try Again</Text>
          </Pressable>
        )}
      </View>
    </View>
  )
}
...
