...
  }
}

export async function fetchHistory() {
  await new Promise((res) => setTimeout(res, 800))
  return [
    { id: "1", title: "Integral of x^2", date: "Oct 26, 2023", grade: 92 },
    {
      id: "2",
      title: "Find the derivative o...",
      date: "Oct 25, 2023",
      grade: 75,
    },
...
