...
  }

  return (
    <View style={styles.container}>
      <Stack.Screen
        options={{
          title: "History",
          headerBackTitle: "Home",
          headerBackTitleStyle: { fontFamily: "Lexend" },
        }}
      />
      {isLoading && (
        <View style={{ alignItems: "center", marginTop: 40 }}>
...
